[package]
name = "map_info"
version = "0.2.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
indexmap = "2.13.0"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
textwrap = "0.16.2"
strsim = "0.11.1"
arboard = "3"
rayon = "1"
